# toqei

./: CMakeLists.txt  README.md  Toqei.plasmoid
package/: metadata.desktop
package/contents/ui/: main.qml
